referrer and sales price chapters - shorten intro text - DE+EN

--- a/docs/de-de/modules/maerkte/partials/auftragsherkunft-aktivieren.adoc
+++ b/docs/de-de/modules/maerkte/partials/auftragsherkunft-aktivieren.adoc
@@ -1,4 +1,4 @@
-Die Auftragsherkunft zeigt an, auf welchem Verkaufskanal oder Marktplatz ein Auftrag erzeugt wurde. Außerdem musst du die Auftragsherkunft aktivieren, um Artikel, Merkmale etc. mit {market} zu verknüpfen. Aktiviere die Auftragsherkunft im Menü *Einrichtung » Aufträge » Auftragsherkunft*.
+Aktiviere die Auftragsherkunft im Menü *Einrichtung » Aufträge » Auftragsherkunft*. Das sorgt dafür, dass Aufträge dem richtigen Verkaufskanal zugeordnet werden.
 
 [.collapseBox]
 .Was ist eine Auftragsherkunft?
