--- a/docs/en-gb/modules/markets/partials/define-sales-price.adoc
+++ b/docs/en-gb/modules/markets/partials/define-sales-price.adoc
@@ -1,4 +1,4 @@
-Sales prices define the conditions under which a variation is sold at a specific price and on a specific sales channel. That means that to sell variations on {referrer}, you need a sales price in which the order referrer *{referrer}* is activated. The price that you save for this sales price is the price that will be shown on {referrer}.
+To sell variations on {referrer}, you need a sales price for which the order referrer *{referrer}* is activated. The price that you save for this sales price is the price that will be shown on {referrer}.
 
 [.collapseBox]
 .What is a sales price?
