--- a/docs/en-gb/modules/markets/partials/activate-referrer.adoc
+++ b/docs/en-gb/modules/markets/partials/activate-referrer.adoc
@@ -1,9 +1,9 @@
-An order referrer tags an order with the sales channel on which the order was generated. You also need to activate the order referrer in order to link items, characteristics etc. with {market}. Go to *Setup » Orders » Order referrer* to activate the order referrer.
+Go to *Setup » Orders » Order referrer* to activate the order referrer. This ensures that orders are assigned to the correct sales channel.
 
 [.collapseBox]
-.What’s an order referrer?
+.What is an order referrer?
 --
-An order referrer tags an order with the sales channel on which the order was generated. Sales channels can be e.g. your online shop or markets on which you sell your items. Each sales channel has an individual order referrer. Some order referrers are available by default in your plentymarkets system. Further order referrers are added e.g. if you install a new plugin. For further information about the order referrer, see the page xref:orders:order-referrer.adoc#20[Order referrer] of the plentymarkets manual.
+An order referrer tags an order with the sales channel on which the order was generated. For example, sales channels can be your plentyShop or markets on which you sell your items. Each sales channel has an individual order referrer ID. Some order referrers are available by default in your plentymarkets system. Other order referrers are added when you install a new plugin. For further information about order referrers, see the page xref:orders:order-referrer.adoc#20[Order referrer] of the plentymarkets manual.
 --
 
 [.instruction]
