FIX a bunch of links in the spreadsheet

--- a/docs/de-de/modules/artikel/pages/multipacks-pakete-sets-verwalten.adoc
+++ b/docs/de-de/modules/artikel/pages/multipacks-pakete-sets-verwalten.adoc
@@ -156,7 +156,7 @@ Multipack-Variante erstellen:
 → Die Variante wird erstellt. +
 → Die Variante wird in der Variantenübersicht angezeigt.
 
-Die Einstellungen der Variante bearbeitest du genauso wie xref:artikel:artikel-verwalten.adoc#170[Varianten von Artikeln des Typs Standard]. Beachte jedoch die folgenden Besonderheiten von Multipack-Varianten:
+Die Einstellungen der Variante bearbeitest du genauso wie xref:artikel:import-export-anlage-verzeichnis.adoc#170[Varianten von Artikeln des Typs Standard]. Beachte jedoch die folgenden Besonderheiten von Multipack-Varianten:
 
 * Deaktiviere die Vererbung des Verkaufspreises und speichere einen eigenen Preis.
 * Der Tab *Bestand* ist rein informativ. Der Bestand wird nur an der Hauptvariante gepflegt.
@@ -244,7 +244,7 @@ Auf diese Weise bietest du in deinem plentyShop den Artikel *Handtuchpaket* als 
 [#2400]
 === Warenbestand von Artikelpaketen einstellen
 
-Der xref:warenwirtschaft:warenwirtschaft.adoc#[Warenbestand] des Pakets richtet sich nach dem Paketbestandteil mit dem geringsten Bestand. Der Warenbestand dieses Paketbestandteils wird in der Artikelübersicht im Menü *Artikel » Artikel bearbeiten* in der Spalte *WB netto* angezeigt. Am Paketartikel selbst pflegst du keinen Bestand. Im Paketbestandteil im Tab *Bestand* verwaltest du den Warenbestand, buchst neue Wareneingänge, korrigierst Bestände und überblickst Zuläufe und Warenbewegungen.
+Der Warenbestand des Pakets richtet sich nach dem Paketbestandteil mit dem geringsten Bestand. Der Warenbestand dieses Paketbestandteils wird in der Artikelübersicht im Menü *Artikel » Artikel bearbeiten* in der Spalte *WB netto* angezeigt. Am Paketartikel selbst pflegst du keinen Bestand. Im Paketbestandteil im Tab *Bestand* verwaltest du den Warenbestand, buchst neue Wareneingänge, korrigierst Bestände und überblickst Zuläufe und Warenbewegungen.
 
 [#2500]
 === Gewicht und Einkaufspreis berechnen
