--- a/docs/en-gb/modules/business-decisions/pages/eol.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/eol.adoc
@@ -5,7 +5,7 @@
 :author: johanna-becker
 
 This page provides you with an overview of functions and areas within plentymarkets that have been slated for termination.
-This overview does not replace the xref:changelog:changelog.adoc#[changelog] or the forum thread within a particular category in the link:https://forum.plentymarkets.com/[plentymarkets Forum^]. Rather, this page provides a central overview to ensure that this kind of information does not get lost due to the large number of threads in the plentymarkets forum.
+This overview does not replace the changelog or the forum thread within a particular category in the link:https://forum.plentymarkets.com/[plentymarkets Forum^]. Rather, this page provides a central overview to ensure that this kind of information does not get lost due to the large number of threads in the plentymarkets forum.
 
 [#10]
 == Upcoming EOL dates
