--- a/docs/en-gb/modules/item/pages/combining-products.adoc
+++ b/docs/en-gb/modules/item/pages/combining-products.adoc
@@ -152,7 +152,7 @@ Creating a multipack variation:
 → The variation is created. +
 → The variation is displayed in the variation overview.
 
-The settings of the variations are edited in the same way as xref:item:managin-items.adoc#170[Default variations]. However, note the following limitations for multipack variations:
+The settings of the variations are edited in the same way as xref:item:import-export-create-directory.adoc#170[Default variations]. However, note the following limitations for multipack variations:
 
 * Deactivate the inheritance function for the sales price and save a price.
 * The information shown in the *Stock* tab cannot be edited. Stock is managed for the main variation only.
@@ -240,7 +240,7 @@ In doing so, you can sell the item *towel bundle* in your plentyShop and offer t
 [#2400]
 === Setting the stock of item bundles
 
-The xref:item:stock-management.adoc#[stock] of a bundle depends on the bundle component with the lowest stock. The stock of this bundle component is displayed in the *Net stock* column of the item overview in the *Item » Edit item* menu. The bundle item itself must not have stock. In the *Stock* tab of a bundle component, you manage the stock, book incoming items, make stock corrections and view supplies as well as item movements.
+The stock of a bundle depends on the bundle component with the lowest stock. The stock of this bundle component is displayed in the *Net stock* column of the item overview in the *Item » Edit item* menu. The bundle item itself must not have stock. In the *Stock* tab of a bundle component, you manage the stock, book incoming items, make stock corrections and view supplies as well as item movements.
 
 [#2500]
 === Calculating the weight and purchase price
@@ -621,12 +621,6 @@ Therefore, make sure you are using a compatible version and xref:plugins:updatin
 [#4410]
 ==== Creating content of the type "Item set"
 
-You decide what your item sets should look like in the online store.
-Do so by creating xref:online-store:shop-builder.adoc#30[content for the category].
-
-[.instruction]
-Creating content for an item set:
-
 . Go to *CMS » ShopBuilder*.
 . Click on a grey item category on the left. +
 *_Note_*: Item sets are not compatible with the yellow content categories.
@@ -655,7 +649,7 @@ Depending on the placement - inside or outside the widget - item information suc
 For example, you can display one image for the entire set and other images for each component.
 
 How do you design the layout, add widgets and modify the widget settings?
-You can find this information on the xref:online-store:shop-builder.adoc#55[ShopBuilder page of the manual].
+You can find this information on the xref:online-store:shop-builder.adoc#editor-view[ShopBuilder page of the manual].
 
 image::item:set-design-content.gif[]
 
