--- a/docs/en-gb/modules/stock-management/pages/managing-bbd-batch.adoc
+++ b/docs/en-gb/modules/stock-management/pages/managing-bbd-batch.adoc
@@ -60,7 +60,7 @@ To ensure that stock with BBD/batch is imported correctly, do not book it into t
 [#300]
 == Redistributing
 
-With BBD/batch you can redistribute items into other warehouses. However, when redistributing variations with BBD/batch, restrictions may occur. For further information on redistributions, see the chapter xref:stock-management:managing-stock.adoc#500[Redistributing stock with best before dates/batches].
+With BBD/batch you can redistribute items into other warehouses. However, when redistributing variations with BBD/batch, restrictions may occur. For further information on redistributions, see the chapter xref:stock-management:managing-stocks.adoc#500[Redistributing stock with best before dates/batches].
 
 [#400]
 == Checking best before dates
@@ -96,7 +96,7 @@ Checking best before dates:
 [#500]
 == Returns
 
-When booking in a variation again with BBD/batch, the process of booking in different batches and BBD on the same storage location is not blocked automatically. However, it is recommended to only book the same BBD/batches to a storage location per variation and warehouse. In case of a chaotic stock keeping of BBD and batch items, errors may occur during order picking. For further information on returns see the chapter xref:stock-management:outgoing-items.adoc#_returns[Returns].
+When booking in a variation again with BBD/batch, the process of booking in different batches and BBD on the same storage location is not blocked automatically. However, it is recommended to only book the same BBD/batches to a storage location per variation and warehouse. In case of a chaotic stock keeping of BBD and batch items, errors may occur during order picking. For further information on returns see the chapter xref:stock-management:outgoing-items.adoc#70[Returns].
 
 [#600]
 == Pick lists, packing lists and warehouse pick lists
