--- a/docs/en-gb/modules/stock-management/pages/managing-stocks.adoc
+++ b/docs/en-gb/modules/stock-management/pages/managing-stocks.adoc
@@ -103,7 +103,7 @@ Searching stocks:
 
 | **Barcode**
 |Enter a barcode to search stock of this variation by barcode.  +
-You can set up barcodes in the xref:item:managing-items.adoc#630[Setup » Item » Barcode] menu and then you need to xref:item:managing-items.adoc#250[link the barcode with your variation].
+You can set up barcodes in the xref:item:barcodes.adoc#[Setup » Item » Barcode] menu and then you need to xref:item:managing-items.adoc#250[link the barcode with your variation].
 
 | **Item data**
 |Enter data in this field to browse through the item ID, variation ID, variation number, item name and variation name. The search will not browse through the preview text or the item text. +
@@ -202,7 +202,7 @@ For further information about the reorder level and reorders, refer to the xref:
 | **RLΔ**
 |Reorder level Delta = Shows the quantity that is missing to reach the reorder level +
 The difference either tells you how many items still need to be sold in order to reach the reorder level or it tells you how many items you need to reorder to reach the reorder level. This means if the difference is negative your stock is still above the reorder level. If the difference is positive, your stock is below the reorder level. +
-The difference between the current stock and the reorder level can also be calculated based on a dynamic reorder level. However, the dynamic reorder level itself is not shown in the system. Only the difference between the current stock and the reorder level shown is based on this dynamic value. The <<stock-management/setting-up-a-warehouse/#reorder-level_variation_warehouse, warehouse settings>> allow you to select if the difference between the current stock and the reorder level is based on the dynamic reorder level or on a static value.
+The difference between the current stock and the reorder level can also be calculated based on a dynamic reorder level. However, the dynamic reorder level itself is not shown in the system. Only the difference between the current stock and the reorder level shown is based on this dynamic value. The xref:stock-management:setting-up-a-warehouse.adoc#200[warehouse settings] allow you to select if the difference between the current stock and the reorder level is based on the dynamic reorder level or on a static value.
 
 | **ø sale**
 |The **average sales** depend on the **sales period** that was saved in the **Setup » Stock » Reorder management » Settings** menu. However, you will only see a value for average sales here if the search filter **Order** is set to **Yes**.
