--- a/docs/en-gb/modules/stock-management/pages/new-incoming-items.adoc
+++ b/docs/en-gb/modules/stock-management/pages/new-incoming-items.adoc
@@ -124,7 +124,7 @@ The recording of incoming items is carried out in 2 steps. At first you need to 
 ==== Registering general incoming items information
 
 You need to have at least one warehouse and supplier before you can register incoming items.
-Create a xref:crm:managing-customer-data.adoc#100[customer data record] for each supplier and select the customer type Supplier.
+Create a xref:crm:create-contact.adoc#create-contact[customer data record] for each supplier and select the customer type Supplier.
 Furthermore, at least one user has to be activated as xref:business-decisions:user-accounts-access.adoc#40[owner of incoming items] so that the incoming items can be assigned to an owner.
 It is not possible to record incoming items without an owner.
 The owners are sorted by ID.
