--- a/docs/en-gb/modules/stock-management/pages/outgoing-items.adoc
+++ b/docs/en-gb/modules/stock-management/pages/outgoing-items.adoc
@@ -103,7 +103,7 @@ The order status will automatically change when the stock is booked out. The new
 This behaviour is implemented in the system and cannot be disabled.
 You can use this status to check whether or not the outgoing items have been booked after the import.
 
-Another possibility to import the package numbers is to import a xref:fulfilment:generating-documents.adoc#package-numbers-csv-file[CSV file].
+Another possibility to import the package numbers is to import a xref:data:practical-example-elasticsync-package-numbers-fulfilment.adoc#[CSV file].
 
 [#40]
 === Booking outgoing items automatically when creating an invoice
