--- a/docs/en-gb/modules/stock-management/pages/practical-guide-stocktaking.adoc
+++ b/docs/en-gb/modules/stock-management/pages/practical-guide-stocktaking.adoc
@@ -173,7 +173,7 @@ Note the following criteria to identify stock differences after stocktaking has 
 
 To check if the stocks of an item are identical before and after stocktaking, create a catalogue using the xref:data:catalogues-stock-movements.adoc#[Stock movements] format. This way, you export all stock movements (grouped by variation) that occurred during the stocktaking process and that have the stock movement reason *Correction because of stocktaking*.
 
-Within the catalogue, use the filter for the <<data/exporting-data/catalogues-stock-movements#30\. sum of stock movements>> to group the entries for a variation. Use an additional filter to select the xref:data:catalogues-stock-movements.adoc#30[date range] in which the stocktaking process took place.
+Within the catalogue, use the filter for the xref:data:catalogues-stock-movements.adoc#30[sum of stock movements] to group the entries for a variation. Use an additional filter to select the xref:data:catalogues-stock-movements.adoc#30[date range] in which the stocktaking process took place.
 To only export stock movements that are related to stocktaking, add the filter for the xref:data:catalogues-stock-movements.adoc#30[reason] *Correction because of stocktaking* with the ID `302`.
 The resulting export will include the total stock difference per variation. The difference should always be 0. +
 Thus, the list shows you at a glance which items have stock differences before and after stocktaking.
