--- a/docs/en-gb/modules/stock-management/pages/working-with-redistributions.adoc
+++ b/docs/en-gb/modules/stock-management/pages/working-with-redistributions.adoc
@@ -665,5 +665,5 @@ Customising the table:
 == Automating redistributions
 Use event procedures to automate the separate working steps of a redistribution. One possibility of automating the generation of the *PO delivery note* has already been described in the <<#870, Automatically generating a PO delivery note>> chapter. In the *Setup » Orders » Events* menu, the events, filters and procedures available in the groups named *Purchase order* allow you to automate certain steps of the redistribution. +
 
-For more detailed information on setting up event procedures, refer to the xref:basics:event-procedures.adoc#[Event procedures] page of the manual. +
+For more detailed information on setting up event procedures, refer to the xref:automation:event-procedures.adoc#[Event procedures] page of the manual. +
 If you are working with event procedures for the first time, pay attention to the information provided on creating event procedures in the chapter xref:automation:event-procedures.adoc#100[Creating a new event procedure].
