--- a/docs/en-gb/modules/stock-management/pages/working-with-reorders.adoc
+++ b/docs/en-gb/modules/stock-management/pages/working-with-reorders.adoc
@@ -1326,4 +1326,4 @@ Customise table:
 == Automating reorders
 Reorders can be partly automated with the help of the event procedures available in your plentymarkets system. One possibility of automating the generation of the reorder document has already been described in the <<#720, Automatically generating a reorder document>> chapter. In the *Setup » Orders » Events* menu, the events, filters and procedures available in the groups named *Purchase order* allow you to automate certain steps of the reorder. +
 
-For more detailed information on setting up event procedures, refer to the xref:basics:event-procedures.adoc#[Event procedures] page of the manual. If you are working with event procedures for the first time, pay attention to the information provided on creating event procedures in the chapter xref:automation:event-procedures.adoc#100[Creating a new event procedure].
+For more detailed information on setting up event procedures, refer to the xref:automation:event-procedures.adoc#[Event procedures] page of the manual. If you are working with event procedures for the first time, pay attention to the information provided on creating event procedures in the chapter xref:automation:event-procedures.adoc#100[Creating a new event procedure].
