--- a/docs/en-gb/modules/welcome/pages/quick-start-item-catalogue.adoc
+++ b/docs/en-gb/modules/welcome/pages/quick-start-item-catalogue.adoc
@@ -461,9 +461,8 @@ Work through the check list in order to review your settings for the item catalo
 * xref:item:item.adoc#[Introducing items]
 * xref:item:search.adoc#100[Searching for items and variations]
 * xref:item:managing-items.adoc#[Manually creating items]
-* xref:item:managing-items.adoc#155[Editing multiple items]
-* xref:item:managing-items.adoc#330[Editing multiple variations]
-* xref:item:combining-products.adoc#[Managing multipacks, item bundles and sets]
+* xref:item:mass-processing.adoc#[Mass processing]
+* xref:item:combining-products.adoc#[Creating multipacks, item bundles and sets]
 
 
 [TIP]
@@ -480,4 +479,4 @@ You want to draw attention to other products of interest directly from an item? 
 
 * xref:data:ElasticSync.adoc#[Creating imports for other imports]
 
-TIP: Continue with xref:welcome:quick-start-stock.adoc#[Booking stock].
+TIP: Continue with xref:welcome:quick-start-booking-stock.adoc#[Booking stock].
