--- a/docs/en-gb/modules/business-decisions/pages/propertyrelations.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/propertyrelations.adoc
@@ -99,7 +99,7 @@ include::partial$datenspalten-en_gb.adoc[]
 |prop_id
 |VARCHAR NOT NULL
 |property ID
-|ID of the property, as specified in the <<item/settings/properties#600, property’s settings>>. +
+|ID of the property, as specified in the xref:item:properties.adoc#600[property’s settings]. +
 *_Pattern_*: plentyID-propertyID
 
 |propr_type
