--- a/docs/en-gb/modules/data/pages/change-history.adoc
+++ b/docs/en-gb/modules/data/pages/change-history.adoc
@@ -436,7 +436,7 @@ When you select a menu here, the corresponding REST rights will also automatical
 |The right to see the xref:data:change-history.adoc#1000[archive] and to request or download archive files for a fee.
 
 | *Data > Change history > Settings*
-|The right to see and modify the <<data/change-history#1100, change history's settings>>.
+|The right to see and modify the xref:data:change-history.adoc#1100[change history's settings].
 |====
 
 [discrete]
@@ -456,10 +456,10 @@ When you select a menu under *Menu visibilities*, the corresponding REST rights 
 |The right to see the xref:data:change-history.adoc#1000[archive].
 
 | *Data > Change history > Settings > Update*
-|The right to modify the <<data/change-history#1100, change history's settings>>.
+|The right to modify the xref:data:change-history.adoc#1100[change history's settings].
 
 | *Data > Change history > Settings > Show*
-|The right to see the <<data/change-history#1100, change history's settings>>.
+|The right to see the xref:data:change-history.adoc#1100[change history's settings].
 
 | *Data > Change history > Search > Show*
 |The right to see and use the xref:data:change-history.adoc#200[live search].
