--- a/docs/en-gb/modules/item/pages/cross-selling.adoc
+++ b/docs/en-gb/modules/item/pages/cross-selling.adoc
@@ -290,7 +290,7 @@ Activating one content automatically deactivates another content of the same typ
 
 The following requirements have to be met in order for direct cross-selling items to be displayed in the plentyShop:
 
-* <<item/online-store/checklist-categories-visibility#, The cross-selling item’s category must be activated>>.
+* xref:item:checklist-categories-visibility.adoc#[The cross-selling item’s category must be activated].
 * xref:item:checklist-items-visibility.adoc#[The items must be visible in the plentyShop].
 
 --
