--- a/docs/en-gb/modules/online-store/pages/shop-builder.adoc
+++ b/docs/en-gb/modules/online-store/pages/shop-builder.adoc
@@ -38,7 +38,7 @@ The first thing you see when opening the **CMS » ShopBuilder** menu is the cont
 
 [[image-ContentManager-ui]]
 .ShopBuilder’s content manager
-image::webshop:ShopBuilder-UI1.png[]
+image::online-store:ShopBuilder-UI1.png[]
 
 * The top bar (highlighted in blue) contains the **global settings**, the **Regenerate all contents** button, the **plugin set selection**, the **language selection**, the **client selection** as well as the safe mode (icon:lock[role="darkGrey"]).
 * The area highlighted in orange is the *Category tree*. Here, you can access categories and create and edit new subcategories via the context menu (icon:ellipsis-v[role="darkGrey"]).
@@ -444,7 +444,7 @@ The ShopBuilder’s editor view is opened by clicking any content in the content
 
 [[bild-editor-ui]]
 .Editor view of the ShopBuilder
-image::webshop:editor-UI.png[]
+image::online-store:editor-UI.png[]
 
 [[table-editor-ui]]
 .Elements of the editor
@@ -2471,13 +2471,13 @@ Several widgets offer the possibility to edit widget texts *inline*. This means 
 
 [[bild-inline-editing]]
 .Opening the inline editor
-image::webshop:inline-editing.png[]
+image::online-store:inline-editing.png[]
 
 Highlight the text you want to edit in the inline editor to open the formatting options. The following formatting options are available:
 
 [[bild-inline-options]]
 .Formatting options in the inline editor
-image::webshop:inline-editing-options.png[]
+image::online-store:inline-editing-options.png[]
 
 [[table-inline-editing]]
 .Formatting options in the inline editor
