Denise/add bi filter includes (#862)
* add 1st batch of DE includes

* add includes DE part 2

* remove beta tag

* adjustments/corrections to filter introduction include

--- a/docs/de-de/modules/business-entscheidungen/partials/filter-einleitung.adoc
+++ b/docs/de-de/modules/business-entscheidungen/partials/filter-einleitung.adoc
@@ -1,2 +1,3 @@
-Filter ermöglichen es dir, die von der Kennzahl berechneten Daten genauer einzugrenzen.
-Wie du Filter hinzufügen und kombinieren kannst, wird auf der xref:business-entscheidungen:myview-dashboard.adoc#[Dashboard (Beta)] Seite des Handbuchs beschrieben.
+Filter ermöglichen es dir, die von der Kennzahl berechneten Daten genauer einzugrenzen. Die folgenden Kapitel enthalten eine Gesamtbersicht über alle verfügbaren Filter. 
+
+*_Wichtig:_* Je nach Dimension, die du für die Kennzahl ausgewählt hast, unterscheiden sich die Filter, die dir zur Verfügung stehen. 
