--- a/docs/de-de/modules/business-entscheidungen/partials/geaendert-am.adoc
+++ b/docs/de-de/modules/business-entscheidungen/partials/geaendert-am.adoc
@@ -1,3 +1,3 @@
 === Geändert am
 
-Filtert die ausgewählte Kennzahl und Dimension zusätzlich nach dem Änderungsdatum {filtered-data}. Wähle einen der folgenden Vergleichsoperatoren aus und wähle dann das gewünschte Datum aus dem Kalender (icon:calendar[]).
+Filtert die ausgewählte Kennzahl und Dimension zusätzlich nach dem Änderungsdatum {filtered-data}. Wähle einen der folgenden Vergleichsoperatoren und lege anschließend rechts das gewünschte Datum oder einen Zeitraum fest.
