--- a/docs/en-gb/modules/business-decisions/pages/average-number-of-order-items.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/average-number-of-order-items.adoc
@@ -717,8 +717,8 @@ include::partial$created-at.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected dates
+:filter: selected dates
 :commas:
 
 [[table-key-figures-operators-created-at]]
@@ -750,8 +750,8 @@ include::partial$paid-at.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected dates
+:filter: selected dates
 :commas:
 
 [[table-key-figures-operators-paid-at]]
@@ -783,8 +783,8 @@ include::partial$date-outgoing-items.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected dates
+:filter: selected dates
 :commas:
 
 [[table-key-figures-operators-items-booked-at]]
