--- a/docs/en-gb/modules/business-decisions/pages/average-order-value.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/average-order-value.adoc
@@ -720,8 +720,8 @@ include::partial$created-at.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected dates
+:filter: selected dates
 :commas:
 
 [[table-key-figures-operators-created-at]]
@@ -753,8 +753,8 @@ include::partial$paid-at.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected dates
+:filter: selected dates
 :commas:
 
 [[table-key-figures-operators-paid-at]]
@@ -786,8 +786,8 @@ include::partial$date-outgoing-items.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected dates
+:filter: selected dates
 :commas:
 
 [[table-key-figures-operators-items-booked-at]]
