--- a/docs/en-gb/modules/business-decisions/pages/messages-key-figure.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/messages-key-figure.adoc
@@ -122,8 +122,8 @@ include::partial$created-at.adoc[]
 --
 
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected dates
+:filter: selected dates
 :commas:
 
 [[table-key-figures-operators-created-at]]
@@ -158,8 +158,8 @@ include::partial$deleted-at.adoc[]
 .Relational operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected dates
+:filter: selected dates
 :commas:
 
 [[table-key-figures-operators-deleted-at]]
@@ -195,8 +195,8 @@ include::partial$done-at.adoc[]
 .Relational operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected dates
+:filter: selected dates
 :commas:
 
 [[table-key-figures-operators-done-at]]
@@ -447,8 +447,8 @@ include::partial$updated-at.adoc[]
 .Relational operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected dates
+:filter: selected dates
 :commas:
 
 [[table-key-figures-operators-updated-at]]
