--- a/docs/en-gb/modules/business-decisions/pages/revenue.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/revenue.adoc
@@ -736,8 +736,8 @@ include::partial$created-at.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected dates
+:filter: selected dates
 :commas:
 
 [[table-key-figures-operators-created-at]]
@@ -769,8 +769,8 @@ include::partial$paid-at.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected dates
+:filter: selected dates
 :commas:
 
 [[table-key-figures-operators-paid-at]]
@@ -802,8 +802,8 @@ include::partial$date-outgoing-items.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected dates
+:filter: selected dates
 :commas:
 
 [[table-key-figures-operators-items-booked-at]]
