--- a/docs/en-gb/modules/business-decisions/pages/shipping-revenue.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/shipping-revenue.adoc
@@ -710,8 +710,8 @@ include::partial$created-at.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected dates
+:filter: selected dates
 :commas:
 
 [[table-key-figures-operators-created-at]]
@@ -743,8 +743,8 @@ include::partial$paid-at.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected dates
+:filter: selected dates
 :commas:
 
 [[table-key-figures-operators-paid-at]]
@@ -776,8 +776,8 @@ include::partial$date-outgoing-items.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected dates
+:filter: selected dates
 :commas:
 
 [[table-key-figures-operators-items-booked-at]]
