--- a/docs/en-gb/modules/business-decisions/pages/usage.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/usage.adoc
@@ -109,7 +109,7 @@ include::partial$filter-introduction.adoc[]
 Do you want to know how many changes were logged on a specific date or during a specific time period?
 Use this filter to analyse your usage according to the date when the change was made.
 
-Select one of the following comparison operators and then select the desired date from the calendar (icon:calendar[]).
+Select one of the following comparison operators and then select the desired date or time period on the right.
 
 
 [.collapseBox]
@@ -117,8 +117,8 @@ Select one of the following comparison operators and then select the desired dat
 --
 
 
-:filter-ending: selected dates (icon:calendar[])
-:filter: selected dates (icon:calendar[])
+:filter-ending: selected dates
+:filter: selected dates
 :commas:
 
 [cols="1,1,3"]
