remove calendar icon DE pages

--- a/docs/de-de/modules/business-entscheidungen/pages/nachrichten.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/nachrichten.adoc
@@ -93,8 +93,8 @@ include::partial$abgeschlossen-am.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: gewählten Terminen (icon:calendar[])
-:filter: gewählten Termine (icon:calendar[])
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
 :kommas:
 
 [[table-key-figures-operators-done-at]]
@@ -157,8 +157,8 @@ include::partial$erstellt-am.adoc[]
 --
 
 
-:filter-endung: gewählten Terminen (icon:calendar[])
-:filter: gewählten Termine (icon:calendar[])
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
 :kommas:
 
 [[table-key-figures-operators-created-at]]
@@ -193,8 +193,8 @@ include::partial$geaendert-am.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: gewählten Terminen (icon:calendar[])
-:filter: gewählten Termine (icon:calendar[])
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
 :kommas:
 
 [[table-key-figures-operators-updated-at]]
@@ -229,8 +229,8 @@ include::partial$geloescht-am.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: gewählten Terminen (icon:calendar[])
-:filter: gewählten Termine (icon:calendar[])
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
 :kommas:
 
 [[table-key-figures-operators-deleted-at]]
