--- a/docs/de-de/modules/business-entscheidungen/pages/auftraege.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/auftraege.adoc
@@ -715,8 +715,8 @@ include::partial$erstellt-am.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: gewählten Terminen (icon:calendar[])
-:filter: gewählten Termine (icon:calendar[])
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
 :kommas:
 
 [[table-key-figures-operators-created-at]]
@@ -748,8 +748,8 @@ include::partial$bezahlt-am.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: gewählten Terminen (icon:calendar[])
-:filter: gewählten Termine (icon:calendar[])
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
 :kommas:
 
 [[table-key-figures-operators-paid-at]]
@@ -781,8 +781,8 @@ include::partial$warenausgangsdatum.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: gewählten Terminen (icon:calendar[])
-:filter: gewählten Termine (icon:calendar[])
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
 :kommas:
 
 [[table-key-figures-operators-items-booked-at]]
