--- a/docs/de-de/modules/business-entscheidungen/pages/rohertrag.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/rohertrag.adoc
@@ -718,8 +718,8 @@ include::partial$erstellt-am.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: gewählten Terminen (icon:calendar[])
-:filter: gewählten Termine (icon:calendar[])
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
 :kommas:
 
 [[table-key-figures-operators-created-at]]
@@ -751,8 +751,8 @@ include::partial$bezahlt-am.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: gewählten Terminen (icon:calendar[])
-:filter: gewählten Termine (icon:calendar[])
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
 :kommas:
 
 [[table-key-figures-operators-paid-at]]
@@ -784,8 +784,8 @@ include::partial$warenausgangsdatum.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: gewählten Terminen (icon:calendar[])
-:filter: gewählten Termine (icon:calendar[])
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
 :kommas:
 
 [[table-key-figures-operators-items-booked-at]]
