--- a/docs/de-de/modules/business-entscheidungen/pages/umsatz.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/umsatz.adoc
@@ -736,8 +736,8 @@ include::partial$erstellt-am.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: gewählten Terminen (icon:calendar[])
-:filter: gewählten Termine (icon:calendar[])
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
 :kommas:
 
 [[table-key-figures-operators-created-at]]
@@ -769,8 +769,8 @@ include::partial$bezahlt-am.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: gewählten Terminen (icon:calendar[])
-:filter: gewählten Termine (icon:calendar[])
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
 :kommas:
 
 [[table-key-figures-operators-paid-at]]
@@ -802,8 +802,8 @@ include::partial$warenausgangsdatum.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: gewählten Terminen (icon:calendar[])
-:filter: gewählten Termine (icon:calendar[])
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
 :kommas:
 
 [[table-key-figures-operators-items-booked-at]]
