--- a/docs/de-de/modules/business-entscheidungen/pages/versandumsatz.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/versandumsatz.adoc
@@ -710,8 +710,8 @@ include::partial$erstellt-am.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: gewählten Terminen (icon:calendar[])
-:filter: gewählten Termine (icon:calendar[])
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
 :kommas:
 
 [[table-key-figures-operators-created-at]]
@@ -743,8 +743,8 @@ include::partial$bezahlt-am.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: gewählten Terminen (icon:calendar[])
-:filter: gewählten Termine (icon:calendar[])
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
 :kommas:
 
 [[table-key-figures-operators-paid-at]]
@@ -776,8 +776,8 @@ include::partial$warenausgangsdatum.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: gewählten Terminen (icon:calendar[])
-:filter: gewählten Termine (icon:calendar[])
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
 :kommas:
 
 [[table-key-figures-operators-items-booked-at]]
