--- a/docs/de-de/modules/business-entscheidungen/partials/subscription-started-at.adoc
+++ b/docs/de-de/modules/business-entscheidungen/partials/subscription-started-at.adoc
@@ -1,4 +1,4 @@
 === Abo startet am
 
-Filtert die ausgewälte Kennzahl und Dimension zusätzlich nach dem Startdatum des xref:auftraege:abonnement.adoc#[Abonnements].
-Wähle einen der folgenden Vergleichsoperatoren aus und wähle dann das gewünschte Datum aus dem Kalender (icon:calendar[]).
+Filtert die ausgewählte Kennzahl und Dimension zusätzlich nach dem Startdatum des xref:auftraege:abonnement.adoc#[Abonnements].
+Wähle einen der folgenden Vergleichsoperatoren und lege anschließend rechts das gewünschte Datum oder einen Zeitraum fest.
