Some minor adjustments

--- a/docs/de-de/modules/maerkte/partials/check24offer-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/check24offer-recommended-mappings.adoc
@@ -58,7 +58,7 @@ _oder_
 | nein
 | * Eigenschaft des Typs *Auswahl*
 
-*_Mögliche Werte:_*
+mögliche Werte:
 
 * `Spedition`
 * `Paket`
@@ -75,7 +75,7 @@ _oder_
 
 * Eigenschaft des Typs *Text* oder *Auswahl* +
 
-erlaubte Werte: `auf Lager`, `nicht auf Lager`
+mögliche Werte: `auf Lager`, `nicht auf Lager`
 
 | UVP
 | nein
@@ -117,7 +117,7 @@ _oder_
 
 * Eigenschaft des Typs *Zeichenkette*
 
-*_Mögliche Werte:_*
+mögliche Werte:
 
 * `ja` = kostenloser Service
 * `nein` = kein Service
@@ -127,7 +127,7 @@ _oder_
 | nein
 | * Eigenschaft des Typs *Auswahl*
 
-*_Mögliche Werte:_*
+mögliche Werte:
 
 * `ja`
 * `nein`
@@ -136,7 +136,7 @@ _oder_
 | nein
 | * Eigenschaft des Typs *Auswahl*
 
-*_Mögliche Werte:_*
+mögliche Werte:
 
 * `ja`
 * `nein`
@@ -145,7 +145,7 @@ _oder_
 | nein
 | * Eigenschaft des Typs *Auswahl*
 
-*_Mögliche Werte:_*
+mögliche Werte:
 
 * `ja`
 * `nein`
