--- a/docs/en-gb/modules/markets/partials/check24offer-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/check24offer-recommended-mappings.adoc
@@ -58,12 +58,12 @@ _or_
 | no
 | * Property of the type *Selection*
 
-*_Possible values:_*
+possible values:
 
 * `Spedition` (shipping company)
 * `Bundle`
 * `Warensendung` (non-registered small package)
-* `Briefsendung` (Mail)
+* `Briefsendung` (mail)
 
 | Variation ID
 | yes
@@ -117,7 +117,7 @@ _or_
 
 * Property of the type *Character string*
 
-*_Possible values:_*
+possible values:
 
 * `ja` (yes) = offered for free
 * `no` (nein) = not offered
@@ -127,7 +127,7 @@ _or_
 | no
 | * Property of the type *Selection*
 
-*_Possible values:_*
+possible values:
 
 * `ja` (yes)
 * `no` (nein)
@@ -136,7 +136,7 @@ _or_
 | no
 | * Property of the type *Selection*
 
-*_Possible values:_*
+possible values:
 
 * `ja` (yes)
 * `no` (nein)
@@ -145,7 +145,7 @@ _or_
 | no
 | * Property of the type *Selection*
 
-*_Possible values:_*
+possible values:
 
 * `ja` (yes)
 * `no` (nein)
