Some minor corrections

--- a/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
@@ -95,7 +95,7 @@ recommended mapping:
 * *Shipping profile »* [Select shipping profile]
 
 3+a| Warehouse +
-*_Note:_* In the Kaufland catalogues, the mappings for *warehouses* are shown for every Kaufland account. Make sure that you map the data fields for the correct Kaufland account, i.e. the Kaufland catalogue for which you want to use this catalogue. +
+*_Note:_* In the Kaufland catalogues, the mappings for *warehouses* are shown for every Kaufland account. Make sure that you map the data fields for the correct Kaufland account, i.e. the Kaufland account for which you want to use this catalogue. +
 The name and the ID of the Kaufland account are displayed above the mappings: *Account name (ID: account ID)*.
 
 image::markets:kaufland-kontoname-lager.png[]
