--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -123,7 +123,7 @@ Je nach gewählter Option werden weitere Einstellungen eingeblendet.
 ! *FTP*
 !  *_Wichtig:_* Ab 21. Juli 2022 werden plentymarkets FTP-Server nicht mehr unterstützt. Nutze diese Option also nur, wenn die Importdatei auf einem externen FTP-Server gespeichert ist.
 
-* *Host (Pflichtfeld)* = Host des FTP-Servers eingeben.
+* *Host* (Pflichtfeld) = Host des FTP-Servers eingeben.
 * *Port* = Port des FTP-Servers. Wenn kein Port eingetragen ist, wird der Standard-Port 22 verwendet.
 * *Benutzername (Pflichtfeld)* = Benutzer:in für FTP-Zugang eingeben.
 * *Passwort (Pflichtfeld)* = Passwort für FTP-Zugang eingeben.
@@ -261,7 +261,7 @@ image::daten:import-mapping-colour.png[]
 [#1710]
 === Abarbeitung von Jobs in der Queue
 
-Die Queue sorgt dafür, dass auch große Datenmengen importiert werden können. Noch vor dem Import wird die Importdatei in Pakete zerlegt. Jedes Paket entspricht einem job. Ein Job besteht aus 750 Zeilen einer CSV- oder TXT-Datei. Aber auch Importdateien mit weniger als 750 Zeilen werden zu einem Job. Wenn ein Import gestartet wird, wird die Datei in Jobs aufgeteilt und in eine Warteschlange eingereiht. In der Warteschlange werden neue Jobs ständig abgerufen und die Importe werden abgearbeitet. Dabei gibt es zwei verschiedene Status. Der Status *Offene Jobs* bedeutet, dass sich noch Jobs in der Warteschlange befinden. *Abgeschlossene Jobs* wurden bereits bearbeitet und die Daten importiert.
+Die Queue sorgt dafür, dass auch große Datenmengen importiert werden können. Noch vor dem Import wird die Importdatei in Pakete zerlegt. Jedes Paket entspricht einem Job. Ein Job besteht aus 750 Zeilen einer CSV- oder TXT-Datei. Aber auch Importdateien mit weniger als 750 Zeilen werden zu einem Job. Wenn ein Import gestartet wird, wird die Datei in Jobs aufgeteilt und in eine Warteschlange eingereiht. In der Warteschlange werden neue Jobs ständig abgerufen und die Importe werden abgearbeitet. Dabei gibt es zwei verschiedene Status. Der Status *Offene Jobs* bedeutet, dass sich noch Jobs in der Warteschlange befinden. *Abgeschlossene Jobs* wurden bereits bearbeitet und die Daten importiert.
 
 [#create-mappings]
 === Zuordnung erstellen
