--- a/docs/de-de/modules/pos/pages/pos.adoc
+++ b/docs/de-de/modules/pos/pages/pos.adoc
@@ -20,7 +20,7 @@ Du interessierst dich für plentyPOS und möchtest dir selbst einen unverbindlic
 
 Du hast dich bereits entschieden, plentyPOS als Kassensystem in deinem Ladengeschäft zu nutzen? Prima! Schaue dich auf den folgenden Seiten um, um Anleitungen und Kontakt zu unseren Servicepartnern zu erhalten.
 
-* link:https://plentypos.plentymarkets.com/[Passende Hardware auswählen^]
+* link:willkommen:systemvoraussetzungen.adoc#500[Passende Hardware auswählen^]
 * xref:pos:pos-einrichten.adoc#[plentyPOS einrichten]
 * xref:pos:pos-kassenbenutzer.adoc#[plentyPOS als Kassenpersonal nutzen]
 
