--- a/docs/en-gb/modules/data/pages/ElasticSync.adoc
+++ b/docs/en-gb/modules/data/pages/ElasticSync.adoc
@@ -121,7 +121,7 @@ Depending on the selected option, the following settings are shown:
 *_Note:_* The option *Delete file after running the import* is activated as default. As such, the file is automatically deleted from the webspace after the data was imported.  Deactivate the option to keep the file in the webspace. *_You will be billed for storing the file on the webspace._*
 
 ! *FTP*
-!  *_Important:_* Since 21/07/2022, plentymarkets FTP servers are no longer supported. As such, only use this option if the import file is saved on an external FTP server.
+!  *_Important:_* plentymarkets no longer provides an FTP server. As such, only use this option if the import file is saved on an external FTP server.
 
 * *Host (mandatory field)* = Enter the host of the FTP server.
 * *Port* = Enter the port of the FTP server. If no port is entered, the default port 22 is used.
@@ -143,7 +143,7 @@ However, only use wildcard characters in combination with the option *Move file 
 . If you selected *HTTP authentication*, enter the *User name* and *Password* for the server.
 
 ! *SFTP*
-!  *_Important:_* Since 21/07/2022, plentymarkets FTP servers are no longer supported. As such, only use this option if the import file is saved on an external FTP server.
+!  *_Important:_* plentymarkets no longer provides an FTP server. As such, only use this option if the import file is saved on an external FTP server.
 
 * *Host* (mandatory field) = Enter the host of the FTP server.
 * *Port* (mandatory field) = Enter the port of the FTP server. If no port is entered, the default port 22 is used.
