--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -121,7 +121,7 @@ Je nach gewählter Option werden weitere Einstellungen eingeblendet.
 *_Hinweis:_* Standardmäßig ist die Option *Datei löschen, nachdem der Import ausgeführt wurde* aktiviert. Die Datei wird also automatisch vom Webspace gelöscht, nachdem die Daten importiert wurden. Wenn die Datei im Webspace gespeichert bleiben soll, deaktiviere diese Option. *_Das Speichern der Datei auf dem Webspace ist kostenpflichtig._*
 
 ! *FTP*
-!  *_Wichtig:_* Ab 21. Juli 2022 werden plentymarkets FTP-Server nicht mehr unterstützt. Nutze diese Option also nur, wenn die Importdatei auf einem externen FTP-Server gespeichert ist.
+!  *_Wichtig:_* plentymarkets stellt keinen FTP-Server mehr bereit. Nutze diese Option also nur, wenn die Importdatei auf einem externen FTP-Server gespeichert ist.
 
 * *Host* (Pflichtfeld) = Host des FTP-Servers eingeben.
 * *Port* = Port des FTP-Servers. Wenn kein Port eingetragen ist, wird der Standard-Port 22 verwendet.
@@ -143,7 +143,7 @@ Verwende Wildcards aber nur in Kombination mit der Option *Datei nach erfolgreic
 . Wenn du *HTTP-Authentifizierung* gewählt hast, gib *Benutzername* und *Passwort* des Servers ein.
 
 ! *SFTP*
-!  *_Wichtig:_* Ab 21. Juli 2022 werden plentymarkets FTP-Server nicht mehr unterstützt. Nutze diese Option also nur, wenn die Importdatei auf einem externen FTP-Server gespeichert ist.
+! *_Wichtig:_* plentymarkets stellt keinen FTP-Server mehr bereit. Nutze diese Option also nur, wenn die Importdatei auf einem externen FTP-Server gespeichert ist.
 
 * *Host* (Pflichtfeld) = Host des FTP-Servers eingeben.
 * *Port* (Pflichtfeld) = Port des FTP-Servers. Wenn kein Port eingetragen ist, wird der Standard-Port 22 verwendet.
