Added complex mapping for condition (#855)
* Added complex mapping for condition

* Update kaufland-recommended-mappings.adoc

* Added translation

* Some minor corrections

--- a/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
@@ -36,9 +36,18 @@ Dieses Datenfeld wird automatisch zugeordnet.
 
 | Zustand
 | ja
-a| Der Zustand der Variante.
+a| Der Zustand der Variante. Für dieses Datenfeld nimmst du eine komplexe Zuordnung vor. Das bedeutet, das du für das Datenfeld des Marktplatzes verschiedene Werte zur Auswahl hast, in diesem Fall sind das die Artikelzustände von Kaufland. Diese Werte ordnest du deinen in plentymarkets gespeicherten Artikeldaten zu. +
+Bei *Zustand* wählst du also zunächst den Zustand von Kaufland und ordnest dann den passenden plentymarkets Zustand zu. +
 
-* Eigenschaft des Typs *Text* oder *Auswahl*, mögliche Werte: NEW, USED&#95;&#95;&#95;AS&#95;NEW, USED&#95;&#95;&#95;VERY&#95;GOOD, USED&#95;&#95;&#95;GOOD, USED&#95;&#95;&#95;ACCEPTABLE
+empfohlene Zuordnung:
+
+* *Artikel » Zustands-ID* +
+
+*_Hinweis:_* Gib bei *Comparative value* eine plentymarkets xref:daten:elasticSync-artikel.adoc#70[Zustands-ID] ein.
+
+_oder_
+
+* Eigenschaft des Typs *Auswahl*
 
 | Verkaufspreis
 | ja
@@ -70,6 +79,21 @@ a| Die Bearbeitungszeit in Tagen.
 
 * Eigenschaft des Typs *Ganze Zahl*
 
+3+a| Versandprofile +
+*_Hinweis:_* In den Kaufland-Katalogen werden für *Versandprofile* die Zuordnungen für alle Kaufland-Konten angezeigt. Achte deshalb darauf, dass du die Zuordnungen für das gewünschte Kaufland-Konto vornimmst - also das Konto, für welches der Katalog erstellt werden soll. +
+Um welches Konto es sich bei den Zuordnungen handelt, siehst du an dem Namen und der ID des Kontos: *Konto-Name_(ID: ID des Kontos)*.
+
+image::maerkte:kaufland-kontoname-versandprofil.png[]
+
+| Kaufland-Versandgruppen-ID
+| ja
+a| Hier ordnest du deinen Kaufland-Versandgruppen Versandprofile aus plentymarkets zu. Für dieses Datenfeld nimmst du eine komplexe Zuordnung vor. Das bedeutet, das du für das Datenfeld des Marktplatzes verschiedene Werte zur Auswahl hast. Diese Werte ordnest du deinen in plentymarkets gespeicherten Artikeldaten zu. Bei *Kaufland Versandgruppen-ID* wählst du zunächst die Kaufland-Versandgruppe und ordnest dann das passende plentymarkets Versandprofil zu. +
+*_Hinweis:_* Hier wird die ID der Kaufland-Versandgruppe angezeigt. +
+
+empfohlene Zuordnung:
+
+* *Versandprofil »* [Versandprofil wählen]
+
 3+a| Lager +
 *_Hinweis:_* In den Kaufland-Katalogen werden für *Lager* die Zuordnungen für alle Kaufland-Konten angezeigt. Achte deshalb darauf, dass du die Zuordnungen für das gewünschte Kaufland-Konto vornimmst - also das Konto, für welches der Katalog erstellt werden soll. +
 Um welches Konto es sich bei den Zuordnungen handelt, siehst du an dem Namen und der ID des Kontos: *Konto-Name (ID: ID des Kontos)*.
@@ -86,21 +110,6 @@ empfohlene Zuordnung:
 
 * Eigenschaft des Typs *Auswahl* +
 *_Tipp:_* Als Auswahlwerte der Eigenschaft kannst du zum Beispiel alle Kaufland-Lager verwenden.
-
-3+a| Versandprofile +
-*_Hinweis:_* In den Kaufland-Katalogen werden für *Versandprofile* die Zuordnungen für alle Kaufland-Konten angezeigt. Achte deshalb darauf, dass du die Zuordnungen für das gewünschte Kaufland-Konto vornimmst - also das Konto, für welches der Katalog erstellt werden soll. +
-Um welches Konto es sich bei den Zuordnungen handelt, siehst du an dem Namen und der ID des Kontos: *Konto-Name_(ID: ID des Kontos)*.
-
-image::maerkte:kaufland-kontoname-versandprofil.png[]
-
-| Kaufland-Versandgruppen-ID
-| ja
-a| Hier ordnest du deinen Kaufland-Versandgruppen Versandprofile aus plentymarkets zu. Für dieses Datenfeld nimmst du eine komplexe Zuordnung vor. Das bedeutet, das du für das Datenfeld des Marktplatzes verschiedene Werte zur Auswahl hast. Diese Werte ordnest du deinen in plentymarkets gespeicherten Artikeldaten zu. Bei *Kaufland Versandgruppen-ID* wählst du zunächst die Kaufland-Versandgruppe und ordnest dann das passende plentymarkets Versandprofil zu. +
-*_Hinweis:_* Hier wird die ID der Kaufland-Versandgruppe angezeigt. +
-
-empfohlene Zuordnung:
-
-* *Versandprofil »* [Versandprofil wählen]
 
 3+| Produktdaten +
 *_Hinweis:_* Diese Daten werden benötigt, um neue Produkte auf Kaufland zu erstellen. Die Daten, die hier verknüpft werden können, unterscheiden sich je nach Produkategorie.
