--- a/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
@@ -36,9 +36,18 @@ This data field is assigned automatically.
 
 | Condition
 | yes
-a| Indicates the condition of the variation.
+a| Indicates the condition of the variation. This data field contains a complex mapping. This means that you can select from different values of the marketplace data field. In this case, the values are the Kaufland item statuses. The values are then assigned to a plentymarkets data field. +
+For *Condition*, you first select the Kaufland condition and the assign the appropriate plentymarkets condition. +
 
-* Property of the type *Text* or *Selection*, possible values: NEW, USED___AS_NEW, USED___VERY_GOOD, USED___GOOD, USED___ACCEPTABLE
+recommended mapping:
+
+* *Item » Condition ID* +
+
+*_Note:_* Enter a plentymarkets xref:data:elasticSync-item.adoc#70[condition ID] in the *Comparative value* field.
+
+_or_
+
+* Property of the type *Selection*
 
 | Sales price
 | yes
@@ -70,7 +79,22 @@ a| The processing time in days.
 
 * Property of the type *Int* (whole number)
 
-3+a| Warehouses +
+3+a| Shipping profiles +
+*_Note:_* In the Kaufland catalogues, the mappings for *shipping profiles* are shown for every Kaufland account. Make sure that you map the data fields for the correct Kaufland account, i.e. the Kaufland catalogue for which you want to use this catalogue. +
+The name and the ID of the Kaufland account are displayed above the mappings: *Account name (ID: account ID)*.
+
+image::markets:kaufland-kontoname-versandprofil.png[]
+
+| Kaufland shipping group ID
+| yes
+a| Here you assign Kaufland shipping groups to your shipping profiles in plentymarkets. This data field contains a complex mapping. This means that you can select from different values of the marketplace data field. The values are then assigned to a plentymarkets data field. For *Kaufland shipping group ID*, first select the Kaufland shipping group and then assign the appropriate plentymarkets shipping profile. +
+*_Note:_* The ID of the Kaufland shipping group is shown here. +
+
+recommended mapping:
+
+* *Shipping profile »* [Select shipping profile]
+
+3+a| Warehouse +
 *_Note:_* In the Kaufland catalogues, the mappings for *warehouses* are shown for every Kaufland account. Make sure that you map the data fields for the correct Kaufland account, i.e. the Kaufland account for which you want to use this catalogue. +
 The name and the ID of the Kaufland account are displayed above the mappings: *Account name (ID: account ID)*.
 
@@ -79,28 +103,13 @@ image::markets:kaufland-kontoname-lager.png[]
 | Kaufland warehouse ID
 | yes
 | Here you map Kaufland warehouses. This data field contains a complex mapping. This means that you can select from different values of the marketplace data field. In this case, the values are your Kaufland warehouses. The values are then assigned to a plentymarkets data field. In this case, you have to use a property. +
-For *Kaufland warehouse ID*, you first select the Kaufland warehouse and then assign a property. +
+For *Kaufland warehouse ID*, first select the Kaufland warehouse and then assign a property. +
 *_Note:_* The ID of the Kaufland warehouse is shown here. +
 
 recommended mapping:
 
 * Property of the type *Selection* +
 *_Tip:_* For example, you can use the names of your Kaufland warehouses as selection values for the property.
-
-3+a| Shipping profiles +
-*_Note:_* In the Kaufland catalogues, the mappings for *shipping profiles* are shown for every Kaufland account. Make sure that you map the data fields for the correct Kaufland account, i.e. the Kaufland account for which you want to use this catalogue. +
-The name and the ID of the Kaufland account are displayed above the mappings: *Account name (ID: account ID)*.
-
-image::markets:kaufland-kontoname-versandprofil.png[]
-
-| Kaufland shipping group ID
-| yes
-a| Here you assign Kaufland shipping groups to your shipping profiles in plentymarkets. This data field contains a complex mapping. This means that you can select from different values of the marketplace data field. The values are then assigned to a plentymarkets data field. For *Kaufland shipping group ID*, first select the Kaufland shipping group and then assign the desired plentymarkets shipping profile. +
-*_Note:_* The ID of the Kaufland shipping group is shown here. +
-
-recommended mapping:
-
-* *Shipping profile »* [Select shipping profile]
 
 3+| Product data +
 *_Note:_* This data are required to create new products on Kaufland. The data which can be linked here differ in each product category.
